# slideSlurper

./: .gitignore  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
lib/: slideSlurper.py
slideslurper/: __init__.py
src/slideslurper/: __init__.py
